--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ os :
  Linux
 
 script:
-
- node-gyp configure
- node-gyp build
+ - npm install -g node-gyp
+ - node-gyp configure
+ - node-gyp build
