--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,8 @@ script:
  - node-gyp configure
  - node-gyp build
  - node index.js
- - npm publish
+ 
+ deploy:
+  provider: npm
+  email: aitbenmouh@gmail.com
+  api_key: ${apikey}
