--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ script:
  - node-gyp build
  - node index.js
  
- deploy:
+deploy:
   provider: npm
-  email: aitbenmouh@gmail.com
-  api_key: ${apikey}
+  email: "aitbenmouh@gmail.com"
+  api_key: "${apikey}"
