--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "hello-world",
+  "name": "hello-world-addon",
   "version": "1.0.1",
-  "description": "",
+  "description": "This a say hello node addon",
   "main": "index.js",
   "scripts": {
     "test": "node index.js"
