--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ script:
  - node-gyp configure
  - node-gyp build
  - npm test
- - cppcheck  --language=c++ --std=c++11 --quiet --error-exitcode=1 . 
+ - cppcheck  --language=c++ --std=c++11 . 
 install:
  - npm install -g mocha
  - sudo apt-get install -qq cppcheck
