--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,14 @@ script:
  - node-gyp configure
  - node-gyp build
  - npm test
- - cppcheck  --language=c++ --std=c++11 . 
+ - cppcheck  -v --enable=all --language=c++ --std=c++11 . 
  - clang-tidy -checks='modernize-use-override' -fix main.cpp -- -std=c++11
 install:
  - npm install -g mocha
  - sudo apt-get install -qq cppcheck
- - sudo apt-get install clang-tidy
+ - sudo apt-add-repository "deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-6.0 release"
+ - sudo apt-get update
+ - sudo apt-get install clang-6.0
 deploy:
   provider: npm
   email: aitbenmouh@gmail.com
