--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,10 @@ script:
 install:
  - npm install -g mocha
  - sudo apt-get install -qq cppcheck
- - sudo apt-add-repository "deb http://apt.llvm.org/trusty/ llvm-toolchain-trusty-6.0 release"
+ - sudo add-apt-repository 'deb http://llvm.org/apt/trusty/ llvm-toolchain-UBUNTU-6.0 main'
+ - curl -L http://llvm.org/apt/llvm-snapshot.gpg.key | sudo apt-key add -
  - sudo apt-get update
- - sudo apt-get install clang-6.0
+ - sudo apt-get install llvm-6.0-dev
 deploy:
   provider: npm
   email: aitbenmouh@gmail.com
