--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ script:
 install:
  - npm install -g mocha
  - sudo apt-get install -qq cppcheck
- - sudo add-apt-repository 'deb http://llvm.org/apt/trusty/ llvm-toolchain-trusty-6.0 main'
+ - sudo add-apt-repository 'deb http://llvm.org/apt/trusty/ llvm-toolchain-trusty-6.0 release'
  - curl -L http://llvm.org/apt/llvm-snapshot.gpg.key | sudo apt-key add -
  - sudo apt-get update
  - sudo apt-get install llvm-6.0-dev
