--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
  - sudo add-apt-repository 'deb http://llvm.org/apt/trusty/ llvm-toolchain-trusty-6.0 release'
  - curl -L http://llvm.org/apt/llvm-snapshot.gpg.key | sudo apt-key add -
  - sudo apt-get update
- - sudo apt-get install llvm-6.0-dev
+ - sudo apt-get install llvm-dev
 deploy:
   provider: npm
   email: aitbenmouh@gmail.com
