--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,6 @@ deploy:
         
   - provider: releases
         email: aitbenmouh@gmail.com
-        api_key: da492eff5278d979aa993ed58d830abb044c38a3
+        api_key: $githubKey
         on:
             tags : true
