deploy on github release

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,5 +24,6 @@ deploy:
   - provider: releases
         email: aitbenmouh@gmail.com
         api_key: $githubKey
+        file: "$TRAVIS_BUILD_DIR/build/Release/say_hello_addon.node"
         on:
             tags : true
