--- a/.travis.yml
+++ b/.travis.yml
@@ -26,4 +26,5 @@ deploy:
         api_key: $githubKey
         file: "$TRAVIS_BUILD_DIR/build/Release/say_hello_addon.node"
         on:
+            repo: benmouh/Say-Hello
             tags : true
