--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ script:
  - node-gyp configure
  - node-gyp build
  - npm test
+ - tar cfvz $TRAVIS_BUILD_DIR/build/Release/say_hello_addon_$PLATFORM.tar.gz $TRAVIS_BUILD_DIR/build/Release/say_hello_addon.node 
  - cppcheck  -v --enable=all --language=c++ --std=c++11 . 
  - clang-tidy -checks='*' -p . src/*.cpp
 install:
@@ -24,7 +25,7 @@ deploy:
  - provider: releases
    email: aitbenmouh@gmail.com
    api_key: $githubKey
-   file: "$TRAVIS_BUILD_DIR/build/Release/say_hello_addon.node"
+   file: "$TRAVIS_BUILD_DIR/build/Release/say_hello_addon_$PLATFORM.tar.gz"
    skip_cleanup: true
    
         
