--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,8 @@ script:
  - npm test
  - cppcheck  -v --enable=all --language=c++ --std=c++11 . 
  - clang-tidy -checks='*' -p . src/*.cpp
- - tar cfvz say_hello_addon_$PLATFORM.tar.gz $TRAVIS_BUILD_DIR/build/Release/say_hello_addon.node 
+ - cd $TRAVIS_BUILD_DIR/build/
+ - tar cfvz Release/say_hello_addon_$PLATFORM.tar.gz Release/say_hello_addon.node 
 install:
  - npm install -g mocha
  - sudo apt-get install -qq cppcheck
