--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@ language: c++
 
 os : 
  - linux
-  :64bit
  - osx
 
 env:
@@ -13,7 +12,8 @@ addons:
       - cppcheck
       - llvm-dev
 before_install:
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update ;fi      
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update ;fi  
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo add-apt-repository 'deb    http://llvm.org/apt/trusty/llvm-toolchain-trusty-6.0 release' curl -L http://llvm.org/apt/llvm-snapshot.gpg.key | sudo apt-key add - ;fi        
 script:
  - npm install -g node-gyp
  - node-gyp configure
