--- a/.travis.yml
+++ b/.travis.yml
@@ -27,11 +27,11 @@ script:
  - cd $TRAVIS_BUILD_DIR
 install:
  - npm install -g mocha
- - sudo apt-get install -qq cppcheck
- - sudo add-apt-repository 'deb http://llvm.org/apt/trusty/ llvm-toolchain-trusty-6.0 release'
- - curl -L http://llvm.org/apt/llvm-snapshot.gpg.key | sudo apt-key add -
- - sudo apt-get update
- - sudo apt-get install llvm-dev
+# - sudo apt-get install -qq cppcheck
+# - sudo add-apt-repository 'deb http://llvm.org/apt/trusty/ llvm-toolchain-trusty-6.0 release'
+# - curl -L http://llvm.org/apt/llvm-snapshot.gpg.key | sudo apt-key add -
+# - sudo apt-get update
+# - sudo apt-get install llvm-dev
 deploy:
  - provider: npm
    email: aitbenmouh@gmail.com
