--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ addons:
       - cppcheck
       - llvm-dev
 before_install:
- - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update ;fi
+ - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update && brew upgrade node && npm install -g npm ;fi
  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo add-apt-repository 'deb http://llvm.org/apt/trusty/ llvm-toolchain-trusty-6.0 release' ;fi
  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then curl -L 'http://llvm.org/apt/llvm-snapshot.gpg.key' | sudo apt-key add - ;fi
 script:
