--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ language:
  - node_js
 node_js:
  - "8"
+ - "stable"
+ - "node"
 os : 
  - linux
  - osx
@@ -15,7 +17,7 @@ addons:
       - cppcheck
       - llvm-dev
 before_install:
- - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update && brew upgrade node && npm install -g npm ;fi
+# - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update && brew upgrade node && npm install -g npm ;fi
  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo add-apt-repository 'deb http://llvm.org/apt/trusty/ llvm-toolchain-trusty-6.0 release' ;fi
  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then curl -L 'http://llvm.org/apt/llvm-snapshot.gpg.key' | sudo apt-key add - ;fi
 script:
