--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,7 @@ os :
  - osx
 
 env:
- Say-Hello:
   - ARCH="x86_64"
-  - PLATFORM="$TRAVIS_OS_NAME"
 platform:
  - x64 
 addons:
@@ -28,7 +26,7 @@ script:
 # - cppcheck  -v --enable=all --language=c++ --std=c++11 . 
 # - clang-tidy -checks='*' -p . src/*.cpp
  - cd $TRAVIS_BUILD_DIR/build/Release
- - tar cfvz say_hello_addon_$PLATFORM.tar.gz say_hello_addon.node 
+ - tar cfvz say_hello_addon_$TRAVIS_OS_NAME.tar.gz say_hello_addon.node 
  - cd $TRAVIS_BUILD_DIR
 install:
  - npm install -g mocha
@@ -44,7 +42,7 @@ deploy:
  - provider: releases
    email: aitbenmouh@gmail.com
    api_key: $githubKey
-   file: "$TRAVIS_BUILD_DIR/build/Release/say_hello_addon_$PLATFORM.tar.gz"
+   file: "$TRAVIS_BUILD_DIR/build/Release/say_hello_addon_$TRAVIS_OS_NAME.tar.gz"
    skip_cleanup: true
    
         
