--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ script:
 # - cppcheck  -v --enable=all --language=c++ --std=c++11 . 
 # - clang-tidy -checks='*' -p . src/*.cpp
  - cd $TRAVIS_BUILD_DIR/build/Release
- - tar cfvz say_hello_addon_$TRAVIS_OS_NAME_$ARCH.tar.gz say_hello_addon.node 
+ - tar cfvz say_hello_addon_$TRAVIS_OS_NAME__$ARCH.tar.gz say_hello_addon.node 
  - cd $TRAVIS_BUILD_DIR
 install:
  - npm install -g mocha
@@ -43,7 +43,7 @@ deploy:
  - provider: releases
    email: aitbenmouh@gmail.com
    api_key: $githubKey
-   file: "$TRAVIS_BUILD_DIR/build/Release/say_hello_addon_$TRAVIS_OS_NAME_$ARCH.tar.gz"
+   file: "$TRAVIS_BUILD_DIR/build/Release/say_hello_addon_$TRAVIS_OS_NAME__$ARCH.tar.gz"
    skip_cleanup: true
    
         
