authorize appevyor to deploy in github release

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -19,7 +19,7 @@ artifacts:
 deploy:
  provider: GitHub
  branch: master    
- auth_token: $(appveyorGithub)
+ auth_token: ${appveyorGithub}
  artifact: build\Release\say_hello_addon_win64.tar.gz
  on:
   appveyor_repo_tag: false
