--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -19,7 +19,8 @@ artifacts:
 deploy:
  provider: GitHub
  branch: master    
- auth_token: {appveyorGithub}
+ auth_token: 
+  secure : $(appveyorGithub)
  artifact: build\Release\say_hello_addon_win64.tar.gz
  on:
   appveyor_repo_tag: false
