authorize appevyor to deploy in github release

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -19,8 +19,8 @@ artifacts:
 deploy:
  provider: GitHub
  branch: master    
- auth_token: 
-  secure : %appveyorGithub%
+ auth_token: '%appveyorGithub%'
  artifact: build\Release\say_hello_addon_win64.tar.gz
  on:
   appveyor_repo_tag: false
+  configuration: Release
