authorize appevyor to deploy in github release

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -20,7 +20,9 @@ deploy:
  description: 'windows release version'
  provider: GitHub
  branch: master    
- auth_token: '%appveyorGithub%'
+ auth_token:
+ secure: kW2dq5Hyg8WlsGniBQ7Xs9c0AM7teybE4HjQcig8Jaw4yeGvoOqkQ49wUTvmKL08
+# '%appveyorGithub%'
  artifact: build\Release\say_hello_addon_win64.tar.gz
  on:
   appveyor_repo_tag: false
