authorize appevyor to deploy in github release

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,11 +10,11 @@ build_script:
 - node-gyp configure
 - node-gyp build
 - cd %APPVEYOR_BUILD_FOLDER%\build\Release\
-- 7z a -tgzip say_hello_addon_win64.tar.gz say_hello_addon.node
+- 7z a -tgzip say_hello_addon_win64.7z say_hello_addon.node
 - cd %APPVEYOR_BUILD_FOLDER%
 artifacts:
-- path: build\Release\say_hello_addon_win64.tar.gz
-  name: say_hello_addon_win64.tar.gz
+- path: build\Release\say_hello_addon_win64.7z
+  name: say_hello_addon_win64.7z
 deploy:
  description: 'windows release version'
  provider: GitHub
@@ -22,7 +22,7 @@ deploy:
  auth_token:
   secure: kW2dq5Hyg8WlsGniBQ7Xs9c0AM7teybE4HjQcig8Jaw4yeGvoOqkQ49wUTvmKL08
 # '%appveyorGithub%'
- artifact: build\Release\say_hello_addon_win64.tar.gz
+ artifact: build\Release\say_hello_addon_win64.7z
  on:
   appveyor_repo_tag: false
   configuration: Release
