--- a/package.json
+++ b/package.json
@@ -6,6 +6,21 @@
   "scripts": {
     "test": "mocha"
   },
+  "dependencies": {
+    "node-pre-gyp": "0.6.x",
+    "node-gyp": "3.6.2"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "install": "node-pre-gyp install --fallback-to-build"
+  },
+  "binary": {
+    "module_name": "hello-world-addon",
+    "module_path": "./bin/",
+    "host": "https://github.com/benmouh/Say-Hello/releases",
+    "remote_path": "./v{version}/",
+    "package_name": "say_hello_addon_{platform}.tar.gz"
+  },
   "keywords": [],
   "author": "Lhoussaine ATI BEN MOUH <aitbenmouh@yahoo.fr> (https://github.com/benmouh)",
   "license": "MIT"
