--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ before_install:
  - echo $TRAVIS_OS_NAME
 script:
  - npm install -g node-gyp
+ - npm install -g node-pre-gyp 
  - node-gyp configure
  - node-gyp build
  - npm test
