--- a/.travis.yml
+++ b/.travis.yml
@@ -46,6 +46,6 @@ deploy:
    api_key: $githubKey
    file: "$TRAVIS_BUILD_DIR/build/Release/say_hello_addon_$ARCHITECTURE.tar.gz"
    skip_cleanup: false
-
+ - verbose: true
    
         
