updated CI configuration

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -6,19 +6,21 @@ configuration: Release
 install:
  - ps: Install-Product node $env:nodejs_version $env:platform
  - npm install -g node-gyp
+ - npm install -g node-pre-gyp
  - npm install -g mocha
 build_script:
  - node-gyp configure
  - node-gyp build
- - cd %APPVEYOR_BUILD_FOLDER%\build\Release\
- - 7z a -tgzip say_hello_addon_win64.7z say_hello_addon.node
- - cd %APPVEYOR_BUILD_FOLDER%
+ - copy %APPVEYOR_BUILD_FOLDER%\build\Release\say_hello_addon.node %APPVEYOR_BUILD_FOLDER%\bin
+ - 7z a -ttar %APPVEYOR_BUILD_FOLDER%\build\Release\tmp.tar %APPVEYOR_BUILD_FOLDER%\bin
+ - 7z a -tgzip %APPVEYOR_BUILD_FOLDER%\build\Release\say_hello_addon_win32.tar.gz %APPVEYOR_BUILD_FOLDER%\build\Release\tmp.tar
+ 
 test_script:
  - npm test
   
 artifacts:
- path: build\Release\say_hello_addon_win64.7z
- name: say_hello_addon_win64.7z
+ path: build\Release\say_hello_addon_win32.tar.gz
+ name: say_hello_addon_win32.tar.gz
 deploy:
  description: 'windows release version'
  provider: GitHub
@@ -26,7 +28,7 @@ deploy:
  auth_token:
   secure: kW2dq5Hyg8WlsGniBQ7Xs9c0AM7teybE4HjQcig8Jaw4yeGvoOqkQ49wUTvmKL08
 # '%appveyorGithub%'
- artifact: build\Release\say_hello_addon_win64.7z
+ artifact: build\Release\say_hello_addon_win32.tar.gz
  on:
   appveyor_repo_tag: false
   configuration: Release
