fix windows build

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -9,8 +9,8 @@ install:
  - npm install -g node-pre-gyp
  - npm install -g mocha
 build_script:
- - node-gyp configure
- - node-gyp build
+ - node-pre-gyp configure
+ - node-pre-gyp build
  - copy %APPVEYOR_BUILD_FOLDER%\build\Release\say_hello_addon.node %APPVEYOR_BUILD_FOLDER%\bin
  - 7z a -ttar %APPVEYOR_BUILD_FOLDER%\build\Release\tmp.tar %APPVEYOR_BUILD_FOLDER%\bin
  - 7z a -tgzip %APPVEYOR_BUILD_FOLDER%\build\Release\say_hello_addon_win32.tar.gz %APPVEYOR_BUILD_FOLDER%\build\Release\tmp.tar
