--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "mocha"
   },
   "dependencies": {
-    "node-pre-gyp": "0.6.x",
+    "node-pre-gyp": "0.9.x",
     "node-gyp": "3.6.2"
   },
   "devDependencies": {},
@@ -17,7 +17,7 @@
     "prepare": "npm ls"
   },
   "binary": {
-    "module_name": "hello-world-addon",
+    "module_name": "say_hello_addon",
     "module_path": "./bin/",
     "host": "https://github.com/benmouh/Say-Hello/releases/download/",
     "remote_path": "./v{version}/",
