--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "hello-world-addon",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "This a say hello node addon, require it then call the sayHello method",
   "main": "index.js",
   "scripts": {
     "test": "mocha"
   },
-  "dependencies": {
+  "dependencies": {  },
+  "devDependencies": {
     "node-pre-gyp": "0.9.x",
     "node-gyp": "3.6.2"
   },
-  "devDependencies": {},
   "scripts": {
     "install": "node-pre-gyp install --fallback-to-build",
 	"test": "mocha",
