--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -29,7 +29,7 @@ deploy:
  provider: GitHub
  branch: master    
  auth_token:
-  secure:%appveyorGithub%
+  secure:$env:appveyorGithub
 # '%appveyorGithub%'
  artifact: build\Release\say_hello_addon_win32.tar.gz
  on:
