--- a/package.json
+++ b/package.json
@@ -1,21 +1,18 @@
 {
   "name": "hello-world-addon",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "This a say hello node addon, require it then call the sayHello method",
   "main": "./lib/index.js",
   "scripts": {
-    "test": "mocha"
-  },
-  "dependencies": {  },
-  "devDependencies": {
-    "node-pre-gyp": "0.9.x",
-    "node-gyp": "3.6.2"
-  },
-  "scripts": {
     "install": "node-pre-gyp install --fallback-to-build",
-	"test": "mocha",
+    "test": "mocha",
     "prepare": "npm ls"
   },
+  "dependencies": {  
+    "node-pre-gyp": "0.9.x",
+    "node-gyp": "3.6.x"
+  },
+  "devDependencies": { },
   "binary": {
     "module_name": "say_hello_addon",
     "module_path": "./bin/",
@@ -27,7 +24,16 @@
     "type": "git",
     "url": "git+https://github.com/benmouh/Say-Hello.git"
   },
-  "keywords": ["node", "addon", "c++", "C", "JavaScript"],
+  "keywords": [
+    "node",
+    "addon",
+    "c++",
+    "C",
+    "JavaScript"
+  ],
   "author": "Lhoussaine ATI BEN MOUH <aitbenmouh@yahoo.fr> (https://github.com/benmouh)",
+   "contributors": [
+    "Lhoussaine AIT BEN MOUH <aitbenmouh@gmail.com> (https://www.linkedin.com/in/lhoussaine-ait-ben-mouh-93683b58/)"
+  ],
   "license": "MIT"
 }
