--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "prepare": "npm ls"
   },
   "dependencies": {  
-    "node-pre-gyp": "0.9.x",
-    "node-gyp": "3.6.x"
+    "node-pre-gyp": "^0.9.1",
+    "node-gyp": "^3.6.2"
   },
   "devDependencies": { },
   "binary": {
