--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
- - "8"
+ - node
 os : 
  - linux
  - osx
@@ -42,6 +42,7 @@ deploy:
  - provider: npm
    email: aitbenmouh@gmail.com
    api_key: $npmKey
+   skip_cleanup: true
    on:
     branch: master
     tags: true
