--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -17,8 +17,16 @@ build_script:
  - 7z a -ttar %APPVEYOR_BUILD_FOLDER%\build\Release\tmp.tar %APPVEYOR_BUILD_FOLDER%\bin
  - 7z a -tgzip %APPVEYOR_BUILD_FOLDER%\build\Release\say_hello_addon_win32.tar.gz %APPVEYOR_BUILD_FOLDER%\build\Release\tmp.tar
  - echo %appveyorGithub%
+ - cd %APPVEYOR_BUILD_FOLDER%\test\cctest
+ - cmake -G "Visual Studio 15 2017 Win64" -DCMAKE_BUILD_TYPE=Release
+ - msbuild tests.vcxproj /property:Configuration=Release /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
+ - cd %APPVEYOR_BUILD_FOLDER%
+ 
 test_script:
  - npm test
+ - cd %APPVEYOR_BUILD_FOLDER%\test\cctest\Release
+ - tests.exe
+ - cd %APPVEYOR_BUILD_FOLDER%
   
 artifacts:
  path: build\Release\say_hello_addon_win32.tar.gz
